generated/mygrParser.cpp

// Generated from grammar/mygr.g4 by ANTLR 4.13.2


#include "mygrListener.h"
#include "mygrVisitor.h"

#include "mygrParser.h"


using namespace antlrcpp;
using namespace mylang;

using namespace antlr4;

namespace {

struct MygrParserStaticData final {
  MygrParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  MygrParserStaticData(const MygrParserStaticData&) = delete;
  MygrParserStaticData(MygrParserStaticData&&) = delete;
  MygrParserStaticData& operator=(const MygrParserStaticData&) = delete;
  MygrParserStaticData& operator=(MygrParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag mygrParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<MygrParserStaticData> mygrParserStaticData = nullptr;

void mygrParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (mygrParserStaticData != nullptr) {
    return;
  }
#else
  assert(mygrParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<MygrParserStaticData>(
    std::vector<std::string>{
      "prog", "statement", "assignment", "print_statement", "if_statement", 
      "while_statement", "for_statement", "for_initializer", "for_condition", 
      "for_updater", "block", "expr", "logical_or_expr", "logical_and_expr", 
      "equality_expr", "relational_expr", "additive_expr", "multiplicative_expr", 
      "unary_expr", "postfix_expr", "primary_expr"
    },
    std::vector<std::string>{
      "", "'print'", "'if'", "'else'", "'elif'", "'while'", "'for'", "'true'", 
      "'false'", "'input'", "'input_int'", "'input_float'", "", "", "", 
      "", "'='", "';'", "'{'", "'}'", "'-'", "'+'", "'/'", "'*'", "'%'", 
      "'++'", "'--'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'&&'", 
      "'||'", "'('", "')'"
    },
    std::vector<std::string>{
      "", "PRINT", "IF", "ELSE", "ELIF", "WHILE", "FOR", "TRUE", "FALSE", 
      "INPUT", "INPUT_INT", "INPUT_FLOAT", "ID", "INT", "FLOAT", "STRING", 
      "ASSIGN", "SEMI", "LBRACE", "RBRACE", "SUB", "ADD", "DIV", "MUL", 
      "MOD", "INC", "DEC", "EQ", "NEQ", "LT", "GT", "LTE", "GTE", "LAND", 
      "LOR", "LPAR", "RPAR", "WS", "COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  mygrParserStaticData = std::move(staticData);
}

}

mygrParser::mygrParser(TokenStream *input) : mygrParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

mygrParser::mygrParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  mygrParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *mygrParserStaticData->atn, mygrParserStaticData->decisionToDFA, mygrParserStaticData->sharedContextCache, options);
}

mygrParser::~mygrParser() {
  delete _interpreter;
}

const atn::ATN& mygrParser::getATN() const {
  return *mygrParserStaticData->atn;
}

std::string mygrParser::getGrammarFileName() const {
  return "mygr.g4";
}

const std::vector<std::string>& mygrParser::getRuleNames() const {
  return mygrParserStaticData->ruleNames;
}

const dfa::Vocabulary& mygrParser::getVocabulary() const {
  return mygrParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView mygrParser::getSerializedATN() const {
  return mygrParserStaticData->serializedATN;
}


//----------------- ProgContext ------------------------------------------------------------------

mygrParser::ProgContext::ProgContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* mygrParser::ProgContext::EOF() {
  return getToken(mygrParser::EOF, 0);
}

std::vector<mygrParser::StatementContext *> mygrParser::ProgContext::statement() {
  return getRuleContexts<mygrParser::StatementContext>();
}

mygrParser::StatementContext* mygrParser::ProgContext::statement(size_t i) {
  return getRuleContext<mygrParser::StatementContext>(i);
}


size_t mygrParser::ProgContext::getRuleIndex() const {
  return mygrParser::RuleProg;
}

void mygrParser::ProgContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProg(this);
}

void mygrParser::ProgContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProg(this);
}


std::any mygrParser::ProgContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrVisitor*>(visitor))
    return parserVisitor->visitProg(this);
  else
    return visitor->visitChildren(this);
}

mygrParser::ProgContext* mygrParser::prog() {
  ProgContext *_localctx = _tracker.createInstance<ProgContext>(_ctx, getState());
  enterRule(_localctx, 0, mygrParser::RuleProg);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(45);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 34463875046) != 0)) {
      setState(42);
      statement();
      setState(47);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(48);
    match(mygrParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

mygrParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mygrParser::StatementContext::getRuleIndex() const {
  return mygrParser::RuleStatement;
}

void mygrParser::StatementContext::copyFrom(StatementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- For_loop_nodeContext ------------------------------------------------------------------

mygrParser::For_statementContext* mygrParser::For_loop_nodeContext::for_statement() {
  return getRuleContext<mygrParser::For_statementContext>(0);
}

mygrParser::For_loop_nodeContext::For_loop_nodeContext(StatementContext *ctx) { copyFrom(ctx); }

void mygrParser::For_loop_nodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFor_loop_node(this);
}
void mygrParser::For_loop_nodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFor_loop_node(this);
}

std::any mygrParser::For_loop_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrVisitor*>(visitor))
    return parserVisitor->visitFor_loop_node(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Print_stmt_nodeContext ------------------------------------------------------------------

mygrParser::Print_statementContext* mygrParser::Print_stmt_nodeContext::print_statement() {
  return getRuleContext<mygrParser::Print_statementContext>(0);
}

tree::TerminalNode* mygrParser::Print_stmt_nodeContext::SEMI() {
  return getToken(mygrParser::SEMI, 0);
}

mygrParser::Print_stmt_nodeContext::Print_stmt_nodeContext(StatementContext *ctx) { copyFrom(ctx); }

void mygrParser::Print_stmt_nodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrint_stmt_node(this);
}
void mygrParser::Print_stmt_nodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrint_stmt_node(this);
}

std::any mygrParser::Print_stmt_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrVisitor*>(visitor))
    return parserVisitor->visitPrint_stmt_node(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Expr_stmt_nodeContext ------------------------------------------------------------------

mygrParser::ExprContext* mygrParser::Expr_stmt_nodeContext::expr() {
  return getRuleContext<mygrParser::ExprContext>(0);
}

tree::TerminalNode* mygrParser::Expr_stmt_nodeContext::SEMI() {
  return getToken(mygrParser::SEMI, 0);
}

mygrParser::Expr_stmt_nodeContext::Expr_stmt_nodeContext(StatementContext *ctx) { copyFrom(ctx); }

void mygrParser::Expr_stmt_nodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExpr_stmt_node(this);
}
void mygrParser::Expr_stmt_nodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExpr_stmt_node(this);
}

std::any mygrParser::Expr_stmt_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrVisitor*>(visitor))
    return parserVisitor->visitExpr_stmt_node(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Assignment_stmt_nodeContext ------------------------------------------------------------------

mygrParser::AssignmentContext* mygrParser::Assignment_stmt_nodeContext::assignment() {
  return getRuleContext<mygrParser::AssignmentContext>(0);
}

tree::TerminalNode* mygrParser::Assignment_stmt_nodeContext::SEMI() {
  return getToken(mygrParser::SEMI, 0);
}

mygrParser::Assignment_stmt_nodeContext::Assignment_stmt_nodeContext(StatementContext *ctx) { copyFrom(ctx); }

void mygrParser::Assignment_stmt_nodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment_stmt_node(this);
}
void mygrParser::Assignment_stmt_nodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment_stmt_node(this);
}

std::any mygrParser::Assignment_stmt_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrVisitor*>(visitor))
    return parserVisitor->visitAssignment_stmt_node(this);
  else
    return visitor->visitChildren(this);
}
//----------------- While_loop_nodeContext ------------------------------------------------------------------

mygrParser::While_statementContext* mygrParser::While_loop_nodeContext::while_statement() {
  return getRuleContext<mygrParser::While_statementContext>(0);
}

mygrParser::While_loop_nodeContext::While_loop_nodeContext(StatementContext *ctx) { copyFrom(ctx); }

void mygrParser::While_loop_nodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhile_loop_node(this);
}
void mygrParser::While_loop_nodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhile_loop_node(this);
}

std::any mygrParser::While_loop_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrVisitor*>(visitor))
    return parserVisitor->visitWhile_loop_node(this);
  else
    return visitor->visitChildren(this);
}
//----------------- If_stmt_nodeContext ------------------------------------------------------------------

mygrParser::If_statementContext* mygrParser::If_stmt_nodeContext::if_statement() {
  return getRuleContext<mygrParser::If_statementContext>(0);
}

mygrParser::If_stmt_nodeContext::If_stmt_nodeContext(StatementContext *ctx) { copyFrom(ctx); }

void mygrParser::If_stmt_nodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIf_stmt_node(this);
}
void mygrParser::If_stmt_nodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIf_stmt_node(this);
}

std::any mygrParser::If_stmt_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrVisitor*>(visitor))
    return parserVisitor->visitIf_stmt_node(this);
  else
    return visitor->visitChildren(this);
}
//----------------- Block_stmt_nodeContext ------------------------------------------------------------------

mygrParser::BlockContext* mygrParser::Block_stmt_nodeContext::block() {
  return getRuleContext<mygrParser::BlockContext>(0);
}

mygrParser::Block_stmt_nodeContext::Block_stmt_nodeContext(StatementContext *ctx) { copyFrom(ctx); }

void mygrParser::Block_stmt_nodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock_stmt_node(this);
}
void mygrParser::Block_stmt_nodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock_stmt_node(this);
}

std::any mygrParser::Block_stmt_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrVisitor*>(visitor))
    return parserVisitor->visitBlock_stmt_node(this);
  else
    return visitor->visitChildren(this);
}
mygrParser::StatementContext* mygrParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, mygrParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(63);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<mygrParser::Assignment_stmt_nodeContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(50);
      assignment();
      setState(51);
      match(mygrParser::SEMI);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<mygrParser::Print_stmt_nodeContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(53);
      print_statement();
      setState(54);
      match(mygrParser::SEMI);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<mygrParser::Expr_stmt_nodeContext>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(56);
      expr();
      setState(57);
      match(mygrParser::SEMI);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<mygrParser::If_stmt_nodeContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(59);
      if_statement();
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<mygrParser::While_loop_nodeContext>(_localctx);
      enterOuterAlt(_localctx, 5);
      setState(60);
      while_statement();
      break;
    }

    case 6: {
      _localctx = _tracker.createInstance<mygrParser::For_loop_nodeContext>(_localctx);
      enterOuterAlt(_localctx, 6);
      setState(61);
      for_statement();
      break;
    }

    case 7: {
      _localctx = _tracker.createInstance<mygrParser::Block_stmt_nodeContext>(_localctx);
      enterOuterAlt(_localctx, 7);
      setState(62);
      block();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AssignmentContext ------------------------------------------------------------------

mygrParser::AssignmentContext::AssignmentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mygrParser::AssignmentContext::getRuleIndex() const {
  return mygrParser::RuleAssignment;
}

void mygrParser::AssignmentContext::copyFrom(AssignmentContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Assignment_op_nodeContext ------------------------------------------------------------------

tree::TerminalNode* mygrParser::Assignment_op_nodeContext::ID() {
  return getToken(mygrParser::ID, 0);
}

tree::TerminalNode* mygrParser::Assignment_op_nodeContext::ASSIGN() {
  return getToken(mygrParser::ASSIGN, 0);
}

mygrParser::ExprContext* mygrParser::Assignment_op_nodeContext::expr() {
  return getRuleContext<mygrParser::ExprContext>(0);
}

mygrParser::Assignment_op_nodeContext::Assignment_op_nodeContext(AssignmentContext *ctx) { copyFrom(ctx); }

void mygrParser::Assignment_op_nodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAssignment_op_node(this);
}
void mygrParser::Assignment_op_nodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAssignment_op_node(this);
}

std::any mygrParser::Assignment_op_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrVisitor*>(visitor))
    return parserVisitor->visitAssignment_op_node(this);
  else
    return visitor->visitChildren(this);
}
mygrParser::AssignmentContext* mygrParser::assignment() {
  AssignmentContext *_localctx = _tracker.createInstance<AssignmentContext>(_ctx, getState());
  enterRule(_localctx, 4, mygrParser::RuleAssignment);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<mygrParser::Assignment_op_nodeContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(65);
    match(mygrParser::ID);
    setState(66);
    match(mygrParser::ASSIGN);
    setState(67);
    expr();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Print_statementContext ------------------------------------------------------------------

mygrParser::Print_statementContext::Print_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t mygrParser::Print_statementContext::getRuleIndex() const {
  return mygrParser::RulePrint_statement;
}

void mygrParser::Print_statementContext::copyFrom(Print_statementContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- Print_func_call_nodeContext ------------------------------------------------------------------

tree::TerminalNode* mygrParser::Print_func_call_nodeContext::PRINT() {
  return getToken(mygrParser::PRINT, 0);
}

tree::TerminalNode* mygrParser::Print_func_call_nodeContext::LPAR() {
  return getToken(mygrParser::LPAR, 0);
}

mygrParser::ExprContext* mygrParser::Print_func_call_nodeContext::expr() {
  return getRuleContext<mygrParser::ExprContext>(0);
}

tree::TerminalNode* mygrParser::Print_func_call_nodeContext::RPAR() {
  return getToken(mygrParser::RPAR, 0);
}

mygrParser::Print_func_call_nodeContext::Print_func_call_nodeContext(Print_statementContext *ctx) { copyFrom(ctx); }

void mygrParser::Print_func_call_nodeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrint_func_call_node(this);
}
void mygrParser::Print_func_call_nodeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrint_func_call_node(this);
}

std::any mygrParser::Print_func_call_nodeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrVisitor*>(visitor))
    return parserVisitor->visitPrint_func_call_node(this);
  else
    return visitor->visitChildren(this);
}
mygrParser::Print_statementContext* mygrParser::print_statement() {
  Print_statementContext *_localctx = _tracker.createInstance<Print_statementContext>(_ctx, getState());
  enterRule(_localctx, 6, mygrParser::RulePrint_statement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    _localctx = _tracker.createInstance<mygrParser::Print_func_call_nodeContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(69);
    match(mygrParser::PRINT);
    setState(70);
    match(mygrParser::LPAR);
    setState(71);
    expr();
    setState(72);
    match(mygrParser::RPAR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- If_statementContext ------------------------------------------------------------------

mygrParser::If_statementContext::If_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* mygrParser::If_statementContext::IF() {
  return getToken(mygrParser::IF, 0);
}

std::vector<tree::TerminalNode *> mygrParser::If_statementContext::LPAR() {
  return getTokens(mygrParser::LPAR);
}

tree::TerminalNode* mygrParser::If_statementContext::LPAR(size_t i) {
  return getToken(mygrParser::LPAR, i);
}

std::vector<mygrParser::ExprContext *> mygrParser::If_statementContext::expr() {
  return getRuleContexts<mygrParser::ExprContext>();
}

mygrParser::ExprContext* mygrParser::If_statementContext::expr(size_t i) {
  return getRuleContext<mygrParser::ExprContext>(i);
}

std::vector<tree::TerminalNode *> mygrParser::If_statementContext::RPAR() {
  return getTokens(mygrParser::RPAR);
}

tree::TerminalNode* mygrParser::If_statementContext::RPAR(size_t i) {
  return getToken(mygrParser::RPAR, i);
}

std::vector<mygrParser::BlockContext *> mygrParser::If_statementContext::block() {
  return getRuleContexts<mygrParser::BlockContext>();
}

mygrParser::BlockContext* mygrParser::If_statementContext::block(size_t i) {
  return getRuleContext<mygrParser::BlockContext>(i);
}

std::vector<tree::TerminalNode *> mygrParser::If_statementContext::ELIF() {
  return getTokens(mygrParser::ELIF);
}

tree::TerminalNode* mygrParser::If_statementContext::ELIF(size_t i) {
  return getToken(mygrParser::ELIF, i);
}

tree::TerminalNode* mygrParser::If_statementContext::ELSE() {
  return getToken(mygrParser::ELSE, 0);
}


size_t mygrParser::If_statementContext::getRuleIndex() const {
  return mygrParser::RuleIf_statement;
}

void mygrParser::If_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIf_statement(this);
}

void mygrParser::If_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIf_statement(this);
}


std::any mygrParser::If_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrVisitor*>(visitor))
    return parserVisitor->visitIf_statement(this);
  else
    return visitor->visitChildren(this);
}

mygrParser::If_statementContext* mygrParser::if_statement() {
  If_statementContext *_localctx = _tracker.createInstance<If_statementContext>(_ctx, getState());
  enterRule(_localctx, 8, mygrParser::RuleIf_statement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    match(mygrParser::IF);
    setState(75);
    match(mygrParser::LPAR);
    setState(76);
    expr();
    setState(77);
    match(mygrParser::RPAR);
    setState(78);
    block();
    setState(87);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == mygrParser::ELIF) {
      setState(79);
      match(mygrParser::ELIF);
      setState(80);
      match(mygrParser::LPAR);
      setState(81);
      expr();
      setState(82);
      match(mygrParser::RPAR);
      setState(83);
      block();
      setState(89);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(92);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == mygrParser::ELSE) {
      setState(90);
      match(mygrParser::ELSE);
      setState(91);
      block();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- While_statementContext ------------------------------------------------------------------

mygrParser::While_statementContext::While_statementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* mygrParser::While_statementContext::WHILE() {
  return getToken(mygrParser::WHILE, 0);
}

tree::TerminalNode* mygrParser::While_statementContext::LPAR() {
  return getToken(mygrParser::LPAR, 0);
}

mygrParser::ExprContext* mygrParser::While_statementContext::expr() {
  return getRuleContext<mygrParser::ExprContext>(0);
}

tree::TerminalNode* mygrParser::While_statementContext::RPAR() {
  return getToken(mygrParser::RPAR, 0);
}

mygrParser::BlockContext* mygrParser::While_statementContext::block() {
  return getRuleContext<mygrParser::BlockContext>(0);
}


size_t mygrParser::While_statementContext::getRuleIndex() const {
  return mygrParser::RuleWhile_statement;
}

void mygrParser::While_statementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhile_statement(this);
}

void mygrParser::While_statementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<mygrListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhile_statement(this);
}


std::any mygrParser::While_statementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<mygrVisitor*>(visitor))
    return parserVisitor->visitWhile_statement(this);
  else
    return visitor->visitChildren(this);
}

mygrParser::While_statementContext* mygrParser::while_statement() {
  While_statementContext *_localctx = _tracker.createInstance<While_statementContext>(_ctx, getState());
  enterRule(_localctx, 10, mygrParser::RuleWhile_statement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(mygrParser::WHILE);
    setState(95);
    match(mygrParser::LPAR);
    setState(96);
    expr();
    setState(97);
    match(mygrParser::RPAR);
    setState(98);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- For_statementContext ------------------------------------------------------------------
